--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -31,14 +32,21 @@ body {
   }
   
   button:hover {
-    background-color: #0056b3;
+    background-color: #174e8a;
+  }
+
+  header:hover {
+    background-color: #36577a; /* Muda a cor de fundo do cabeçalho quando o mouse passa sobre ele */
   }
   
-  .images {
-    display: flex;
-    flex-wrap: wrap;
+  header h1 {
+    transition: font-size 0.3s ease; /* Adiciona uma transição suave ao tamanho da fonte */
   }
   
+  header:hover h1 {
+    font-size: 36px; /* Aumenta o tamanho da fonte do cabeçalho quando o mouse passa sobre ele */
+  }
+    
   .image {
     flex: 0 0 50%;
     padding: 10px;
